overflow issue working

--- a/home.css
+++ b/home.css
@@ -120,7 +120,7 @@ header a.talk-btn {
   justify-content: space-around;
   color: white;
   margin-top: 50px;
-  max-width: 400px;
+  max-width: 300px;
   min-width: 0;
   background: #eaf6f641;
   border-radius: 25px;
@@ -146,7 +146,7 @@ header a.talk-btn {
 }
 .hero-wrapper .text {
   padding: 2px;
-  font-size: 1rem;
+  font-size: .5rem;
 }
 
 .hero-text {
